# mlops

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  README_INTELLIGENT.md  config.yaml  docker-compose.yml  install.sh  install_interactive.sh  intelligent_entrypoint.sh  intelligent_setup.sh  main.py  main_intelligent.py  main_simple.py  omnitide.py  pyproject.toml  requirements.txt  setup.sh  start.sh
.dvc/: config
.github/: copilot-instructions.md
.github/workflows/: main.yml
data/raw/: data.csv
monitoring/: prometheus.yml
nginx/: nginx.conf
src/: config.py  data_processor.py  deployer.py  intelligent_config.py  llm_agent.py  llm_agent_new.py  llm_agent_old.py  model_evaluator.py  model_trainer.py
tests/: test_intelligent_config.py  test_main_api.py
