# pyproject.toml
[tool.poetry]
name = "omnitide-ai-suite"
version = "0.1.0"
description = "An end-to-end MLOps suite with LLM and Tailscale integration."
authors = ["The Architect <architect@omnitide.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
joblib = "^1.4.2"
dvc = "^3.50.0"
pydantic = "^2.8.2"
prometheus-client = "^0.20.0"
structlog = "^24.2.0"
rich = "^13.7.1"
pyyaml = "^6.0.1"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
